# asapdiscovery-sars-retrospective

./: .gitignore  README.md  pyproject.toml
202305-sars-retrospective-docking/notebooks/: README.md
data/: 202240129_p_only_cmpd_to_frag.yaml  20240201_cmpd_to_frag_from_metadata.yaml
production/: README.md
production/covid_moonshot_fragalysis_processing/: clean_moonshot_data.py  combined_sdf_from_cache.py  covid_moonshot_fragalysis_processing.ipynb  generate_date_dict.py  prep_cache_for_docking.py
production/utils/: split_sdf.py
science/: README.md
science/202301-core-analysis/: 20230617-fragalysis-chemical-diversity-v2.ipynb  ligand_rmsd_analysis.ipynb
science/20230601_hybrid_docking/: README.md
science/20230929_updated_core_analysis/: 20231002_updated_core_analysis.ipynb
science/20231030-multiple-poses/: 20231213_calc_rmsd_and_save.ipynb  20231213_test_multipose_loading.ipynb  20240229_multipose_analysis.ipynb  README.md  run_cross_docking_hybrid_array.sh
science/20231101-prep-sars-test/: prep_full_mpro_v2.sh
science/20231101-processing-kendall-results/: 20231101-processing-kendall-results.ipynb
science/20231116_multi_reference_docking/: README.md  README.txt  run_cross_docking.sh
science/20231117-process-fragalysis-duplicates/: 20231117-process-fragalysis-duplicates.ipynb  20231212-process-fragalysis-dups.ipynb  20231212_fragalysis_duplicates.csv
science/20240110_multi_ref_leave_similar_out/: README.txt
science/20240116-updated-core-analysis/: README.md  (+5 more)
software/: analysis.py  analysis_schema.py  paths.py  paths.yaml  plotting.py
(+280 files in other folders)
