[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "docking-retrospective-analysis"
authors=[ {name="Alex Payne", email="alex.payne@choderalab.org"} ]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
split-sdf = "production.utils.split_sdf:main"